Implemented tests for the DeckService class and refactored part of the code.